--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <h1>Total Comander</h1>
     </header>
     <nav>
-        <a href="#">HOME</a>
-        <a href="#">HISTORY</a>
-        <a href="#">ABOUT US</a>
-        <a href="#">SUPORT</a>
+        <abbr title="DECORATION"><a href="#">HOME</a></abbr>
+        <a target="_blank" href="https://en.wikipedia.org/wiki/Total_Commander">HISTORY</a>
+        <a href="#"><abbr title="DECORATION">SUPORT</abbr></a>
         <a href="#">v2.0</a>
         
     </nav>
     <main>
         <h2>Para que serve o Total Commander?</h2>
+        <img src="imagens/logototalcmd.png" alt="logototalcmd">
         <article>
             <p>O <strong>Total Commander</strong> é um <strong>gerenciador de arquivos</strong> para Windows (e também disponível em versões para Android e outras plataformas). Ele serve como uma alternativa mais poderosa e avançada ao Explorador de Arquivos padrão do Windows.</p>
 
