mudei umas coisa

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Total Comander</title>
+    <title>Total Commander</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Total Comander</h1>
+        <h1>Total Commander</h1>
     </header>
     <nav>
-        <abbr title="DECORATION"><a href="#">HOME</a></abbr>
+        <a href="https://pt.wikipedia.org/wiki/Christian_Giesler">CREATOR</a>
         <a target="_blank" href="https://en.wikipedia.org/wiki/Total_Commander">HISTORY</a>
         <a href="#"><abbr title="DECORATION">SUPORT</abbr></a>
         <a href="#">v2.0</a>
