--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         
     </nav>
     <main>
-        <h2>Para que serve o Total Commander?</h2>
-        <img src="imagens/logototalcmd.png" alt="logototalcmd">
+        <div class="logo">
+            <img src="imagens/logototalcmd.png" alt="logototalcmd">
+            <h2>Para que serve o Total Commander?</h2>
+        </div>
+        
         <article>
             <p>O <strong>Total Commander</strong> é um <strong>gerenciador de arquivos</strong> para Windows (e também disponível em versões para Android e outras plataformas). Ele serve como uma alternativa mais poderosa e avançada ao Explorador de Arquivos padrão do Windows.</p>
 
