--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Total Commander</h1>
     </header>
     <nav>
-        <a href="https://pt.wikipedia.org/wiki/Christian_Giesler">CREATOR</a>
-        <a target="_blank" href="https://en.wikipedia.org/wiki/Total_Commander">HISTORY</a>
-        <a href="#"><abbr title="DECORATION">SUPORT</abbr></a>
+        <a href="https://pt.wikipedia.org/wiki/Christian_Giesler" target="_blank">CREATOR</a>
+        <a href="https://en.wikipedia.org/wiki/Total_Commander" target="_blank">HISTORY</a>
+        <a href="#">SUPORT</a>
         <a href="#">v2.0</a>
         
     </nav>
@@ -39,11 +39,11 @@
 
         </article>
         <aside>
-
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque fugit sed libero fuga quasi quia voluptate iure. Quis itaque, minus consequuntur molestias dolores iste nam id necessitatibus quasi, et sapiente.</p>
         </aside>
     </main>
     <footer>
-
+        <p>Feito e Desenvolvido por<strong> João Costa</strong></p>
     </footer>
     
 </body>
